--- a/settings.gradle
+++ b/settings.gradle
@@ -5,5 +5,5 @@
  * in the user manual at https://docs.gradle.org/6.6.1/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'mancala'
+rootProject.name = 'mancala-java'
 include('api', 'domain')
