--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,13 +11,17 @@ test-job1:
   script:
     - echo "This job tests something"
 
-test-job2:
+ruby:
   stage: test
   script:
-    - echo "This job tests something, but takes more time than test-job1."
-    - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
-    - echo "which simulates a test that runs 20 seconds longer than test-job1"
-    - sleep 20
+    - bundle install
+    - bundle exec rspec --format progress --format RspecJunitFormatter --out rspec.xml
+  artifacts:
+    when: always
+    paths:
+      - rspec.xml
+    reports:
+      junit: rspec.xml
 
 deploy-prod:
   stage: deploy
