--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,11 @@
+default:
+  image: gradle:jdk14
+
 stages:
   - build
   - test
 
 build-domain:
-  image: gradle:jdk14
   stage: build
   script:
     - gradle :domain:build
