--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'java-library'
 }
 
+apply plugin: 'jacocoTestReport'
+
 repositories {
     // Specify the repository mirror that we want to download our dependencies from. JCentral is configured by default when creating a new Gradle project.
     jcenter()
@@ -15,7 +17,12 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
 }
 
+jacoco{
+    toolVersion = '0.7.5'
+}
+
 jacocoTestReport {
+    toolVersion = '0.7.5'
     reports {
         csv.enabled true
         csv.destination file("${buildDir}/jacocoCsv")
