--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'java-library'
 }
 
-apply plugin: 'jacocoTestReport'
+apply plugin: 'jacoco'
 
 repositories {
     // Specify the repository mirror that we want to download our dependencies from. JCentral is configured by default when creating a new Gradle project.
