--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 
 jacoco{
     toolVersion = '0.7.5'
-    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
+    // reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
 }
 
 jacocoTestReport {
