--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 }
 
 jacoco{
-    toolVersion = '0.7.5'
+    toolVersion = "0.8.7"
     // reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
 }
 
