Tried jacoco cvs output

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -24,9 +24,8 @@ jacoco{
 jacocoTestReport {
     dependsOn test
     reports {
-        xml.required = false
-        csv.required = false
-        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+        csv.enabled true
+        csv.destination file("${buildDir}/jacocoCsv")
     }
 }
 
