--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -32,5 +32,5 @@ jacocoTestReport {
 test {
     // For running our tests, use the test runner provided by JUnit.
     useJUnitPlatform()
-    finalizedBy jacocoTestReport
+    finalizedBy("jacocoTestReport")
 }
