--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,8 @@ test-domain:
     - 'gradle :domain:test'
     - 'gradle test jacocoTestReport'
   artifacts:
-    paths: build/jacoco/jacoco.xml
+    paths: 
+      - build/jacoco/jacoco.xml
     reports:
       junit: domain/build/test-results/test/**/TEST-*
 
@@ -24,7 +25,7 @@ build-domain:
   script:
     - gradle :domain:assemble
   artifacts:
-        paths:
+      paths:
         - domain/build/libs/domain
 
 coverage-domain:
