--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,9 +16,9 @@ test-domain:
     - 'gradle test jacocoTestReport'
   artifacts:
     paths: 
-      - domain/build/jacoco/jacoco/
+      - domain/build/jacoco/jacoco.xml
     reports:
-      junit: domain/build/test-results/test/**/TEST-*
+      junit: domain/build/test-results/test/**/TEST-*.xml
 
 build-domain:
   stage: build
