--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,9 +16,10 @@ test-domain:
     - 'gradle test jacocoTestReport'
   artifacts:
     paths: 
-      - build/jacoco/jacoco.xml
+      - domain/build/jacoco/jacoco.xml
     reports:
-      junit: build/test-results/test/**/TEST-*.xml
+      junit: domain/build/test-results/test/**/TEST-*.xml
+      jacoco: domain/build/jacoco/jacoco.xml
 
 build-domain:
   stage: build
@@ -26,7 +27,7 @@ build-domain:
     - gradle :domain:assemble
   artifacts:
       paths:
-        - build/libs/domain
+        - domain/build/libs/domain
 
 coverage-domain:
   stage: visualize
@@ -34,11 +35,10 @@ coverage-domain:
   # taken from example on https://docs.gitlab.com/ee/user/project/merge_requests/test_coverage_visualization.html 
   script:
     # convert report from jacoco to cobertura, using relative project path
-    - python /opt/cover2cover.py build/jacoco/jacoco.xml $CI_PROJECT_DIR/src/main/java/ > build/cobertura.xml
+    - python /opt/cover2cover.py domain/build/jacoco/jacoco.xml $CI_PROJECT_DIR/src/main/java/ > domain/build/cobertura.xml
   needs: ["test-domain"]
   dependencies:
     - test-domain
   artifacts:
     reports:
-      cobertura: build/cobertura.xml
-
+      cobertura: domain/build/cobertura.xml
