Using same image for testing as example

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ stages:
 
 test-domain:
   stage: test
+  image: gradle:6.6.1-jdk11
   script:
     - 'gradle :domain:test'
     - 'gradle test jacocoTestReport'
