--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -18,8 +18,8 @@ dependencies {
 
 jacocoTestReport {
     reports {
-        html.enabled true
-        csv.enabled true
+        html.enabled false
+        csv.enabled false
         xml.enabled true
     }
 }
