--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,7 @@ coverage-domain:
   script:
     # convert report from jacoco to cobertura, using relative project path
     - python /opt/cover2cover.py domain/build/reports/jacoco/test/jacocoTestReport.xml $CI_PROJECT_DIR/src/main/java/ > domain/build/cobertura.xml
+    - sed -ier 's;\(<source>\).*\(</source>\);\1./\2;' domain/build/cobertura.xml
     - sed -ier 's;\(filename="\)\(.*\)";\1domain/src/main/java/\2;' domain/build/cobertura.xml
   needs: ["test-domain"]
   dependencies:
