--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ test-api:
     - gradle test jacocoTestReport
   artifacts:
     paths:
-      -api/build/reports/jacoco/test/jacocoTestReport.xml
+      - api/build/reports/jacoco/test/jacocoTestReport.xml
     reports:
         junit: domain/build/test-results/test/**/TEST-*.xml
 
